# chess-robot

./: .gitignore  CLAUDE.md  chess-robot-arm-build-plan.md
hardware/joint_bringup/: BOM_single_joint.md  ORDER_CART.md  README.md  calibration_and_tuning.md  moteus_joint_config.md  wiring.md
hardware/joint_bringup/bringup/: configure_joint.py  connect_check.py  requirements.txt  step_repeatability_test.py
hardware/joint_bringup/config/: wrist_joint.cfg
scripts/: build_and_verify.sh  build_moveit_from_source.sh  install_ros_lyrical.sh
src/chess_arm_brain/: package.xml  setup.cfg  setup.py
src/chess_arm_brain/chess_arm_brain/: __init__.py  brain.py  brain_node.py
src/chess_arm_brain/test/: test_brain.py
src/chess_arm_description/: CMakeLists.txt  README.md  package.xml
src/chess_arm_description/config/: arm_params.yaml  board_coordinates.yaml  ros2_controllers.yaml
src/chess_arm_description/launch/: display.launch.py
src/chess_arm_description/meshes/: .gitkeep
src/chess_arm_description/rviz/: view.rviz
src/chess_arm_description/scripts/: gen_board_coordinates.py  reachability_check.py
src/chess_arm_description/urdf/: arm.macros.xacro  arm_params.xacro  chess_arm.ros2_control.xacro  chess_arm.urdf.xacro  gripper.macros.xacro  inertial_macros.xacro  materials.xacro  scene.macros.xacro
src/chess_arm_description/worlds/: chess.sdf
src/chess_arm_interfaces/: CMakeLists.txt  package.xml
src/chess_arm_interfaces/msg/: PieceAction.msg
src/chess_arm_interfaces/srv/: DetectChanges.srv  GetEngineMove.srv  PlanPieceActions.srv  ResolveHumanMove.srv
src/chess_arm_moveit_config/: CMakeLists.txt  README.md  package.xml
src/chess_arm_moveit_config/config/: chess_arm.srdf  chess_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml
src/chess_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit.rviz  moveit_rviz.launch.py  rsp.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py
src/chess_arm_orchestrator/: LICENSE  package.xml  setup.cfg  setup.py
src/chess_arm_orchestrator/chess_arm_orchestrator/: __init__.py  dry_run.py  executors.py  orchestrator_node.py  piece_actions.py  play_sim_game.py  sim_game_driver.py
src/chess_arm_orchestrator/launch/: game.launch.py  game_moveit.launch.py  live_game.launch.py
src/chess_arm_orchestrator/test/: test_copyright.py  test_executors.py  test_flake8.py  test_pep257.py  test_piece_actions.py
src/chess_arm_vision/: package.xml  setup.cfg  setup.py
src/chess_arm_vision/chess_arm_vision/: __init__.py  detector.py  vision_node.py
src/chess_arm_vision/test/: test_copyright.py  test_detector.py  test_flake8.py  test_pep257.py
