<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_arm_brain</name>
  <version>0.0.1</version>
  <description>
    Chess game/logic library and thin ROS 2 node for the chess-playing robot
    arm. The pure-Python library (ChessBrain, StockfishEngine, BoardCoordinates)
    holds the authoritative python-chess game state, resolves human moves from
    vision changed-square sets, and decomposes a move into ordered robot piece
    actions. brain_node exposes the canonical ResolveHumanMove / GetEngineMove /
    PlanPieceActions services.
  </description>
  <maintainer email="neildesh@gmail.com">neil</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>chess_arm_interfaces</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <!-- External runtime deps (not in rosdep on all distros): the python-chess
       library and the Stockfish UCI engine binary. Stockfish is opened lazily
       so the logic library and unit tests run without it. -->
  <exec_depend>python3-chess</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <!-- stockfish: install the 'stockfish' binary on PATH (apt: stockfish). -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
