<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_arm_description</name>
  <version>0.0.1</version>
  <description>
    6-DOF chess-playing robot arm: URDF/xacro (arm + adaptive gripper + ros2_control),
    standard-board + graveyard world scene, RViz display, and a Gazebo Jetty world.
    Phase 0 of the chess-robot build (ROS 2 Lyrical Luth).
  </description>
  <maintainer email="neildesh@gmail.com">neil</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime tools: this package ships only data (xacro/urdf/launch/rviz/worlds),
       so its tool deps are exec_depend, not build_depend. -->
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- ros2_control plugins referenced by the description's <ros2_control> block.
       Only loaded at runtime for the matching hardware_type; harmless otherwise. -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>parallel_gripper_controller</exec_depend>

  <!-- Gazebo Jetty sim (used only when ros2_control_hardware_type:=gz). -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
