<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>chess_arm_moveit_config</name>
  <version>0.0.1</version>
  <description>
    MoveIt 2 configuration for the chess_arm 6-DOF arm. Provides kinematics (KDL),
    the OMPL planning pipeline, mock_components ros2_control bring-up, and the
    RViz demo launch for Phase 0 simulation.
  </description>
  <maintainer email="neildesh@gmail.com">Neil</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Robot description providing the URDF/xacro that this config wraps. -->
  <exec_depend>chess_arm_description</exec_depend>

  <!-- MoveIt config / launch helpers. -->
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>

  <!-- State publishing + RViz. -->
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <!-- ros2_control stack for the mock_components demo. -->
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>parallel_gripper_controller</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
